# cuda_oplib

./: .gitignore  CMakeLists.txt
cpp/: CMakeLists.txt
cpp/include/: factory.h  rng.h  tensor.h  tensor_defines.h  tensor_utils.h
cpp/src/: cudaoplib.cpp  rng.cpp  tensor.cpp
include/: cuda_utils.h  elementwise.h  tensor.h
kernel/: CMakeLists.txt
kernel/include/: cuda_utils.h  elementwise.h  kernel_tensor.h  reduce.h
kernel/src/: elementwise.cu  reduce.cu  tensor.cu
kernel/src/history/: reduce.cu  reduce_v1.cu
reports/reduce/: reduce_optimization_report.md
src/: elementwise.cu  tensor.cu
tests/: CMakeLists.txt  test_cudaoplib
tests/common/: torch_worker.py
tests/include/: bench_utils.hpp  tensor_ref.h  torch_ref_ops.hpp
tests/src/: main.cpp
tests/src/arithmetic/: test_arithmetic.cpp
tests/src/benchmark/: bench_perf.cpp
tests/src/common/: tensor_ref.cpp
tests/src/comparison/: test_comparison.cpp
tests/src/edge_cases/: test_edge.cpp
tests/src/logical/: test_logical.cpp
tests/src/reduce/: test_sum.cpp
